name:                hoff
-- please keep version consistent with hoff.nix
version:             0.28.5
category:            Development
synopsis:            A gatekeeper for your commits

copyright:           Copyright 2016 Ruud van Asseldonk
license:             Apache-2.0
license-file:        license

author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com

build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  default-language: Haskell2010
  ghc-options:     -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-ignore-asserts
  hs-source-dirs:  src
  exposed-modules: Configuration
                 , EventLoop
                 , Format
                 , Git
                 , Github
                 , GithubApi
                 , Logic
                 , Project
                 , Server
                 , Metrics.Server
                 , Metrics.Metrics
                 , Sum
                 , Time
                 , Types
                 , WebInterface

  build-depends: aeson
               , aeson-pretty
               , base
               , base16-bytestring
               , blaze-html
               , blaze-markup
               , bytestring
               , containers
               , cryptonite
               , directory
               , extra
               , file-embed
               , filepath
               , free
               , github
               , http-client
               , http-types
               , memory
               , monad-logger
               , process
               , process-extras
               , prometheus-client
               , prometheus-metrics-ghc
               , scotty
               , stm
               , text
               , text-format
               , time
               , vector
               , wai
               , wai-middleware-prometheus
               , warp
               , warp-tls
  other-modules: Paths_hoff
  autogen-modules: Paths_hoff

executable hoff
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates

  build-depends: async
               , base
               , containers
               , directory
               , github
               , hoff
               , monad-logger
               , optparse-applicative
               , text
  other-modules: Paths_hoff
  autogen-modules: Paths_hoff

test-suite spec
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  ProjectSpec
  hs-source-dirs: tests
  ghc-options:    -Wall -Werror

  build-depends: aeson
               , base
               , bytestring
               , containers
               -- TODO: Use the new function that really deletes directories,
               -- instead of rolling my own.
               , directory
               , filepath
               , free
               , generic-arbitrary
               , hoff
               , hspec
               , hspec-core
               , QuickCheck
               , quickcheck-instances
               , text
               , time
               , transformers
               , uuid

test-suite end-to-end
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        EndToEnd.hs
  other-modules:  EventLoopSpec, ServerSpec
  hs-source-dirs: tests
  ghc-options:    -Wall -Werror -threaded -rtsopts -with-rtsopts=-N

  build-depends: async
               , base
               , bytestring
               , containers
               , cryptonite
               , filepath
               -- TODO: Use the new function that really deletes directories,
               -- instead of rolling my own.
               , directory
               , hoff
               , http-conduit
               , hspec
               , hspec-core
               , http-types
               , monad-logger
               , random
               , stm
               , text
               , time
               , uuid
